# research-and-design

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  parcer.cpp  run-clang-format.sh  run-cppcheck.sh  run-doctest.sh  run-wick.sh  test.wick  test_wick.exe.stackdump  wick.exe.stackdump
docs/: Doxyfile  annotated.html  annotated_dup.js  class_environment-members.html  class_environment.html  class_error_reporter-members.html  class_error_reporter.html  class_expression_1_1_expression_1_1_visitor-members.html  class_expression_1_1_expression_1_1_visitor.html  class_interpreter-members.html  class_interpreter.html  class_interpreter.js  class_parser-members.html  class_parser.html  class_persistent_map-members.html  class_persistent_map.html  class_persistent_map.js  class_scanner-members.html  class_scanner.html  class_statement_1_1_statement_1_1_visitor-members.html  class_statement_1_1_statement_1_1_visitor.html  class_statement_1_1_statement_1_1_visitor.js  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  environment_8cpp_source.html  environment_8hpp_source.html  error_reporter_8cpp_source.html  error_reporter_8hpp_source.html  expression_8cpp_source.html  expression_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  hierarchy.html  hierarchy.js  index.html  index.js  (+84 more)
include/: environment.hpp  errorProne.hpp  errorReporter.hpp  expression.hpp  interpreter.hpp  main.hpp  native.hpp  parser.hpp  persistentMap.hpp  scanner.hpp  statement.hpp  token.hpp  tokenizer.hpp
source/: bird.cpp  environment.cpp  errorProne.cpp  errorReporter.cpp  expression.cpp  factorial.cpp  interpreter.cpp  main.cpp  native.cpp  parser.cpp  persistentMap.cpp  scanner.cpp  statement.cpp  styles.css  token.cpp  (+1 more)
(+197 files in other folders)
